<resources>
    <string name="app_name">RepairOrder</string>
    <string name="app_name_header">Repair Order</string>

    <string name='name_label'>Name</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="subtotalSum">$ 0.0</string>
    <string name="totalSum">$ 0.0</string>
    <string name="taxSum">$ 0.0</string>
    <string name="submitButton">Submit</string>
    <string name="textViewTotal">Total</string>
    <string name="text7">Name</string>
    <string name="labor">Labor</string>
    <string name="paints">Paints</string>
    <string name="inspection">Inspection</string>
    <string name="technician">Technician</string>
    <string name="order_type">Order Type</string>
    <string name="fill_out_details_below">Fill out details below</string>
    <string name="_0_0">$ 0.0</string>

    <string-array name="order_types">
        <item>Oil Change</item>
        <item>Tire Replacement</item>
        <item>Paint Job</item>
        <item>Brake Service</item>
    </string-array>


</resources>