<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepairOrderActivity">

    <!-- Title -->

    <TextView
        android:id="@+id/textViewTax2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="55dp"
        android:text="@string/taxSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTax"
        app:layout_constraintTop_toBottomOf="@+id/textViewSub2" />

    <TextView
        android:id="@+id/textViewTotal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="57dp"
        android:text="@string/totalSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTotal"
        app:layout_constraintTop_toBottomOf="@+id/textViewTax2" />

    <TextView
        android:id="@+id/textViewSub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="2dp"
        android:text="@string/subtotalSum"
        app:layout_constraintEnd_toStartOf="@+id/textViewTax2"
        app:layout_constraintStart_toEndOf="@+id/textViewSubtotal3"
        app:layout_constraintTop_toBottomOf="@+id/editTextLabor" />

    <TextView
        android:id="@+id/textViewTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="243dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="116dp"
        android:text="@string/tax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLabor" />

    <TextView
        android:id="@+id/textViewSubtotal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="243dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="116dp"
        android:text="@string/subtotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLabor" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#B17878"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fill out details below"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Order Type -->

    <!-- Technician -->

    <TextView
        android:id="@+id/textViewOrderType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="Order Type"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <!-- Inspection -->

    <EditText
        android:id="@+id/editTextOrderType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/textViewOrderType"
        app:layout_constraintTop_toTopOf="@id/textViewOrderType" />

    <TextView
        android:id="@+id/textViewTechnician"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="Technician"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOrderType" />

    <EditText
        android:id="@+id/editTextTech"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/textViewTechnician"
        app:layout_constraintTop_toTopOf="@id/textViewTechnician" />

    <TextView
        android:id="@+id/textViewInspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inspection"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/textViewTechnician"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"/>

    <!-- Paints -->
    <EditText
        android:id="@+id/editTextInspection"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/textViewInspection"
        app:layout_constraintTop_toTopOf="@id/textViewInspection" />

    <TextView
        android:id="@+id/textViewPaints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Paints"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/textViewInspection"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"/>

    <!-- Parts -->

    <EditText
        android:id="@+id/editTextPaints"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/textViewPaints"
        app:layout_constraintTop_toTopOf="@id/textViewPaints" />

    <TextView
        android:id="@+id/textViewParts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Parts"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/textViewPaints"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"/>

    <!-- Labor -->

    <EditText
        android:id="@+id/editTextParts"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/textViewParts"
        app:layout_constraintTop_toTopOf="@id/textViewParts" />

    <TextView
        android:id="@+id/textViewLabor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="Labor"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewParts" />

    <EditText
        android:id="@+id/editTextLabor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/textViewLabor"
        app:layout_constraintTop_toTopOf="@id/textViewLabor" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="244dp"
        android:text="@string/submitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLabor" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="243dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="116dp"
        android:text="@string/textViewTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLabor" />


</androidx.constraintlayout.widget.ConstraintLayout>
